--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.20.2"
+    "mongoose": "^8.20.2",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
