--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "ISC",
   "author": "Devvv Piyush",
   "type": "module",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon ./app.js"
+    "start": "nodemon ./index.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -18,6 +19,7 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.2",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
